# TPPE-K

./: .env.example  .gitignore  README.md  VPS-DEPLOYMENT.md  deploy-vps.sh  docker-compose.yml  docker.ps1  docker.sh  setup-mysql.sh  test-mysql.py
backend/: .dockerignore  .pre-commit-config.yaml  Makefile  dockerfile  pyproject.toml  requirements.txt  test_auth_debug.py  test_auth_direct.py  test_jwt.py
backend/database/: create_tables_standalone.py  docker_init.sh  populate_db.py
backend/database/init/: 01-init.sql
backend/src/: __init__.py  config.py  main.py  security.py
backend/src/auth/: repository_auth.py  router_auth.py  schema_auth.py  test_auth.py
backend/src/database/: database.py
backend/src/hospital/: __init__.py
backend/src/medico/: __init__.py  repository_medico.py  router_medico.py  schema_medico.py  test_medico.py
backend/src/model/: models.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/src/: App.css  App.js  index.css
frontend/src/contexts/: AuthContext.js
frontend/src/pages/: Dashboard.js  LoginPage.js  RegisterPage.js
frontend/src/services/: api.js
nginx/: nginx.conf
