[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hospital-system"
version = "0.1.0"
description = "Simple Hospital Management System"
requires-python = ">=3.8"

[tool.ruff]
# Set the maximum line length to 88 (same as Black)
line-length = 88

# Enable additional rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "Q",   # flake8-quotes
]

# Ignore specific rules
ignore = [
    "E501",  # Line too long (handled by line-length)
    "B008",  # Do not perform function calls in argument defaults
]

# Exclude directories
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "migrations",
]

# Set the target Python version
target-version = "py38"

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces, rather than tabs
indent-style = "space"

# Respect magic trailing commas
skip-magic-trailing-comma = false

# Automatically detect the appropriate line ending
line-ending = "auto"

[tool.ruff.isort]
# Sort imports
known-first-party = ["src"]
force-single-line = false
force-sort-within-sections = true

[tool.ruff.per-file-ignores]
# Ignore specific rules for test files
"tests/**/*.py" = ["S101"]  # Allow assert statements in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=src --cov-report=html --cov-report=term-missing"
